@@ -1,4 +1,4 @@
-name: CMake
+name: CMake-build (Windows)
 
 on: [push, pull_request]
 
