@@ -1,4 +1,4 @@
-name: CMake
+name: CMake-build
 
 on: [push]
 
