@@ -1,4 +1,4 @@
-name: configure CI
+name: build
 
 on: [push, pull_request]
 
